Added all Kotlin files and XML files from previous repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
-    id 'org.jetbrains.kotlin.plugin.serialization'
+    //id 'org.jetbrains.kotlin.plugin.serialization'
     id 'kotlin-kapt'
 }
 
