--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.healthbud">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".HealthBudApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +15,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthBud"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:ignore="MissingClass">
+        <!-- Medicine Log Activity -->
+        <activity android:name=".MedicineLogActivity"
+            android:exported="true" />
+        <!-- Exercise Log Activity -->
+        <activity android:name=".Exercise"
+            android:exported="true" />
+        <!-- Food Log Activity -->
+        <activity android:name=".FoodLogActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
